# sql-tool

./: .gitignore  README.md  pyproject.toml
mcp_server_sql/: server.py
sql_tool/: server.py
