[project]
name = "sql-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "sqlalchemy>=2.0.41",
]

[[project.authors]]
name = "Lim Phanith"
email = "limphanith.dev@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sql-tool = "sql_tool.server:main"

[tool.uv]
package = true